--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     {% assign content_width = 'is-12' %} 
 {% endif %}
 <!DOCTYPE html>
-<html class="has-navbar-fixed-top">
+<html>
   {% include head.html %}
   <body>
     {% include header.html %}
