--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar is-primary is-fixed-top" >
+<nav class="navbar is-primary" >
     <div class="container">
         <div class="navbar-brand">
             <a href="{{ site.baseurl }}/" class="navbar-item">
