--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,12 @@
 <html>
   {% include head.html %}
   <body>
+      
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N6K9NBR"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+      
     {% include header.html %}
     {% unless page.hide_hero %}
         {% include hero.html %}
