--- a/assets/_src/sass/_settings.scss
+++ b/assets/_src/sass/_settings.scss
@@ -18,10 +18,9 @@ $color-lilac: #ece6ff;
 $color-mimosa: #ffe2cf;
 $color-khaki: #f4eee9;
 $color-warmgray: #cec8c3;
-$color-link-blue: #2762fb;
 
-$link-color: $color-link-blue;
-$link-hover: $color-electricpurple;
+$link-color: $color-electricpurple;
+$link-hover: $color-darkpurple;
 
 $link-color-footer: $color-coral;
 $link-footer-hover: $color-coral;
