--- a/assets/_src/sass/components/_header.scss
+++ b/assets/_src/sass/components/_header.scss
@@ -23,6 +23,7 @@
 		color: $color-mediumpurple;
 		display: block;
 		padding: 1.25rem;
+		-webkit-tap-highlight-color: transparent;
 		width: 10.375rem;
 	}
 
