--- a/assets/_src/sass/components/_article.scss
+++ b/assets/_src/sass/components/_article.scss
@@ -28,7 +28,30 @@
 		line-height: 106%;
 		text-align: left;
 	}
-	
+
+	h3 {
+		color: $color-mediumpurple;
+		font-family: $font-family;
+		font-size: 1.5rem;
+		font-style: normal;
+		font-weight: 500;
+		letter-spacing: 0.5px;
+		line-height: 106%;
+		text-align: left;
+	}
+
+	h4 {
+		color: $color-electricpurple;
+		font-family: $font-family;
+		font-size: 1.2rem;
+		font-style: normal;
+		font-weight: 500;
+		letter-spacing: 0.5px;
+		line-height: 106%;
+		text-align: left;
+		text-transform: uppercase;
+	}	
+		
 	p,
 	li,
 	strong {
