Decrease size of sub items

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -26,7 +26,7 @@
 							<a class="navbar-subitem navbar-item-indent" href="{{ entry.url }}">
 						{% endif %}
 								<span class="navbar-subitem-content">
-									<span class="navbar-subitem-title">{{ entry.title }}</span>
+									<span class="navbar-subitem-title navbar-subitem-title-smaller">{{ entry.title }}</span>
 									{% if entry.description %}
 										<span class="navbar-subitem-description">{{ entry.description }}</span>
 									{% endif %}
