--- a/assets/_src/sass/components/_footer.scss
+++ b/assets/_src/sass/components/_footer.scss
@@ -5,8 +5,21 @@
 	font-weight: 300;
 	line-height: 75%;
 	line-height: 1.4;
-	padding: 2.8rem 5rem 2.6rem;
+	padding: 2.8rem 1.5rem 2.6rem;
+
+	@include from($tablet) {
+		padding: 2.8rem 2.5rem 2.6rem; 
+	}
 	
+	a span {
+		color: #fff;
+	}
+
+	a span:hover {
+		color: #fff;
+		text-decoration: underline;
+	}
+
 	a,
 	a:visited {
 		color: $link-color-footer;
@@ -17,11 +30,30 @@
 		text-decoration: underline;
 	}
 
+	&-container {
+		margin: 0 auto;
+		max-width: $footer-width;
+	}
+
 	&-header {
 		color: #fff;
 		font-size: 0.9375rem;
 		font-weight: 600;
 		padding-bottom: 1rem;
+
+		@include from($tablet) {
+			width: 25rem;
+		}
+	}
+
+	&-main {
+		@include from($tablet) {
+			width: 490px;
+		}
+	}
+
+	.column {
+		padding: 0.75rem 0;
 	}
 
 	.footer-logo {
@@ -34,15 +66,6 @@
 		top: 0.2em;
 	}
 	
-	a span {
-		color: #fff;
-	}
-
-	a span:hover {
-		color: #fff;
-		text-decoration: underline;
-	}
-
 	.ten7-link:hover {
 		text-decoration: none;
 	}
