--- a/assets/_src/sass/components/_navbar-item.scss
+++ b/assets/_src/sass/components/_navbar-item.scss
@@ -1,27 +1,3 @@
-.navbar-item .navbar-dropdown {
-	border: 0;
-	border-radius: 5px;
-	overflow: hidden;
-	top: 3.5em;
-	width: 280px;
-}
-
-.navbar-item .navbar-link,
-.navbar-item {
-	color: $color-mediumpurple;
-	font-family: $font-family;
-	font-size: 1.125rem;
-	font-weight: 500;
-
-	&::after {
-		border-color: $color-mediumpurple;
-		border-radius: 0;
-		height: 0.525em;
-		top: 1.3em;
-		width: 0.525em;
-	}
-}
-
 .nav-main .navbar-item {
 	color: $color-mediumpurple;
 }
@@ -31,88 +7,64 @@
 	color: $color-mediumpurple;
 }
 
-.navbar-subitem {
-	border-bottom: 1px solid #f4eee9;
-	display: flex;
-	padding: 1rem;
-
-	&:hover {
-		background-color: $color-mediumpurple;
-	}
-
-	&:hover .navbar-subitem-title {
-		color: #fff;
-	}
-
-	&:hover .navbar-subitem-description {
-		color: #fff;
-	}
-
-	&-icon {
-		align-items: center;
-		background-color: #ece6ff;
-		border-radius: 52px;
-		color: $color-mediumpurple;
-		display: flex;
-		flex-shrink: 0;
-		font-size: 1rem;
-		height: 29px;
-		justify-content: center;
-		margin-right: 0.5rem;
-		width: 29px;
-	}
-
-	&-title {
-		color: $color-mediumpurple;
-		display: block;
-		font-size: 1.125rem;
-	}
-
-	&-description {
-		color: $color-dustylavender;
-		font-size: 0.875rem;
-	}
-}
-
 .navbar-item-header {
 	border-bottom: 1px solid #f4eee9;
 	color: $color-mediumpurple;
 	font-size: 1.5rem;
+	font-weight: 500;
 	padding: 1rem 1.5rem;
+
+	@include from($tablet) {
+		padding: 1rem 2.5rem;
+	}
+}
+
+.navbar-menu.is-active {
+	display: block;
+	left: 0;
+	padding: 0;
+	position: absolute;
+	top: 6.2rem;
+	width: 100%;
+}
+
+.navbar-item .navbar-dropdown {
+	border-radius: 0 0 5px 5px;
+	width: 100%;
+}
+
+@include from($desktop) {
+	.navbar-item .navbar-dropdown {
+		border: 0;
+		border-radius: 5px;
+		overflow: hidden;
+		top: 3.5em;
+		width: 280px;
+	}
+
+	.navbar-item .navbar-link,
+	.navbar-item {
+		color: $color-mediumpurple;
+		font-family: $font-family;
+		font-size: 1.125rem;
+		font-weight: 500;
+
+		&::after {
+			border-color: $color-mediumpurple;
+			border-radius: 0;
+			height: 0.525em;
+			top: 1.3em;
+			width: 0.525em;
+		}
+	}
 }
 
 .navbar-dropdown .navbar-item-indent {
-	@include until($tablet) {
+	@include mobile {
 		padding-left: 3rem;
 	}
-}
-
-@media screen and (max-width: 1023px) {
-	.navbar-menu.is-active {
-		display: block;
-		left: 0;
-		padding: 0;
-		position: absolute;
-		top: 6.2rem;
-		width: 100%;
-	}
 	
-	.navbar-subitem .navbar-subitem-description {
-		font-size: 1rem;
-	}
-
-	.navbar-subitem .navbar-subitem-title {
-		font-size: 1.5rem;
-	}
-
-	.navbar-item .navbar-dropdown {
-		border-radius: 0 0 5px 5px;
-		width: 100%;
-	}
-}
-
-@media screen and (max-width: 769px) {
-	.navbar-menu.is-active {
-		top: 6.2rem;
+	@include tablet-only {
+		padding-left: 5rem;
 	}
 }
