Add further tweaks to the footer at all widths

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div class="navbar nav container">
-  <div class="nav-container column is-9">
+  <div class="nav-container column">
     <div class="nav-brand navbar-brand">
       <a href="/" title="{{ site.title}}" class="nav-brand-link">
         <span class="nav-brand-title">{{ site.title }}</span>
