--- a/assets/_src/sass/components/_footer.scss
+++ b/assets/_src/sass/components/_footer.scss
@@ -5,11 +5,7 @@
 	font-weight: 300;
 	line-height: 75%;
 	line-height: 1.4;
-	padding: 2.8rem 1.5rem 2.6rem;
-
-	@include from($tablet) {
-		padding: 2.8rem 2.5rem 2.6rem; 
-	}
+	padding: 2.8rem 0 2.6rem;
 	
 	a span {
 		color: #fff;
@@ -46,14 +42,13 @@
 		}
 	}
 
-	&-main {
-		@include from($tablet) {
-			width: 490px;
-		}
-	}
-
 	.column {
 		padding: 0.75rem 2.5rem;
+
+		@include mobile {
+			padding: 0.75rem 1.5rem;
+		}
+
 	}
 
 	.footer-logo {
