--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,9 +1,8 @@
 <div id="thisNavBar" class="navbar-menu">
-<div class="navbar-item has-dropdown">
-	
 {% for item in site.nav %}
 
 	{% if item.subfolderitems %}
+	<div class="navbar-item has-dropdown">
 		<!-- header for mobile dropdown -->
 		<div class="navbar-item-header is-hidden-desktop">{{ item.title }}</div> 
 		{% assign nav_title = item.title %}
@@ -16,8 +15,13 @@
 
 		
 				<a class="navbar-link is-hidden-mobile is-hidden-touch">{{ item.title }}</a>
-
-				<div class="navbar-dropdown">
+				
+				{% if item.subfolderitems %}
+					<div class="navbar-dropdown">
+				{% else %}
+					<div class="navbar-item">
+				{% endif %}
+				
 					{% for entry in item.subfolderitems.items %}
 
 						{% if entry.url == page.url %}
@@ -60,16 +64,14 @@
 				</div>
 
        
-	
+	</div>
 	{% else %}
-		
+		<div class="navbar-item">
 		{% unless item.is_button %}
 			<a class="navbar-item is-hidden-touch" href="{{ item.url }}">{{ item.title }}</a>
 		{% endunless %}
-	
+		</div>
 	{% endif %}
 
 {% endfor %}
-
-</div>
 </div> 
