--- a/assets/_src/sass/components/_article.scss
+++ b/assets/_src/sass/components/_article.scss
@@ -35,7 +35,7 @@ li > ul > li::before {
 		line-height: 105%;
 		text-align: left;
 	}
-	
+
 	h2 {
 		color: $color-mediumpurple;
 		font-family: $font-family;
@@ -68,8 +68,8 @@ li > ul > li::before {
 		line-height: 106%;
 		text-align: left;
 		text-transform: uppercase;
-	}	
-			
+	}
+
 	p,
 	li,
 	strong {
@@ -77,14 +77,12 @@ li > ul > li::before {
 		font-family: $font-family;
 		font-size: 1.2rem;
 		letter-spacing: 0.02em;
+		overflow-wrap: break-word;
 	}
 
 	strong {
 		font-weight: 500;
-		
 	}
-
-	
 
 	.post-opener p {
 		color: $color-mediumpurple;
@@ -126,7 +124,7 @@ li > ul > li::before {
 		h1 {
 			font-size: 2.5rem;
 		}
-		
+
 		h2 {
 			font-size: 1.75rem;
 		}
