Fix height for low content pages

--- a/assets/_src/sass/components/_article.scss
+++ b/assets/_src/sass/components/_article.scss
@@ -133,6 +133,10 @@ li > ul > li::before {
 			font-size: 0.8125rem;
 			line-height: 0.9375rem;
 		}
+
+		.post-content {
+			min-height: 70vh;
+		}
 	}
 }
 
