--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,9 +19,8 @@
             {% for item in site.nav %} 
               {% if item.is_button %}
                 <button class="button is-hidden-mobile is-hidden-touch">
-                    <a href="https://github.com/ten7/tractorbeam.ten7.com" class="button-link" target="_blank">
+                    <a href="{{ item.url }}" class="button-link" target="_blank">
                         <svg class="button-logo" width="18" height="18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <!-- <title>Visit TEN7</title> -->
                             <path
                                 d="M10.25 7.75 16.5 1.5M12.334 1.5h4.167v4.167M16.5 10.667v4.166a1.666 1.666 0 0 1-1.667 1.667H3.167A1.667 1.667 0 0 1 1.5 14.833V3.167A1.667 1.667 0 0 1 3.167 1.5h4.166"
                             />
