--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,12 @@
 <footer class="footer">
   <div class="footer-container columns">
     <div class="column footer-main is-9">
-      <div class="footer-header">Built with love by TEN7</div>
-      {{site.title}} is built and supported by TEN7—we create and care for Drupal-powered websites. We talk about {{site.title}} extensively in episode 93 of <a href="https://ten7.com/podcast">The TEN7 Podcast</a> with <a href="https://twitter.com/socketwench">@socketwench</a> titled <a href="https://ten7.com/podcast/episode/tractorbeam-our-open-source-multi-tier-backup-solution">Tractorbeam: Our open source multi-tier backup solution</a>
+      {% if site.footer.has_built_with_love %}
+      <div class="footer-header">Built with love by TEN7</div>  
+      {% endif %}
+      
+      {{ site.footer.html | flatify }}
+
     </div>
     <div class="column has-text-right is-3">
       <a href="https://ten7.com" class="ten7-link">
